# webp2ubot

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
src/: main.py
